--- a/src/app/product/product-details/product-details.component.scss
+++ b/src/app/product/product-details/product-details.component.scss
@@ -10,6 +10,10 @@
 
   .banner {
     background: url('/assets/img/banner-3.jpg') center center/cover;
+
+    @media (max-width: 1200px) {  
+      display: none;
+    }
   }
 
   .reloading {
@@ -25,8 +29,17 @@
     background-color: #fff;
     overflow: hidden;
 
+    @media (max-width: 1200px) {
+      padding: 0;
+      flex-direction: column;
+    }
+
     .slider-wrapper {
       width: 65%;
+
+      @media (max-width: 1200px) {
+        width: 100%;
+      }
     }
 
     .product-information {
@@ -34,6 +47,10 @@
       height: inherit;
       padding: 1.5rem;
       background-color: inherit;
+
+      @media (max-width: 1200px) {
+        width: 100%;
+      }
 
       .content {
         width: 100%;
@@ -82,7 +99,7 @@
 
         .quantity {
           width: fit-content;
-          margin: 0 auto 4rem;  
+          margin: 3rem auto;  
         }
       }
 
@@ -92,6 +109,16 @@
         align-items: center;
         width: 100%;
         margin-bottom: 4rem;
+
+        @media (max-width: 768px) {  
+          button {
+            width: calc(50% - 0.5rem);       
+          }
+        }
+        
+        button {
+          transition: all .3s ease;
+        }
 
         .buy-now-btn {
           margin-right: 1rem;          
@@ -104,69 +131,8 @@
         }
 
         p {
-          line-height: 1.7rem;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 1200px) {
-  .product-detail-section {
-
-    .details-container {
-      padding: 0;
-      flex-direction: column;
-
-      .slider-wrapper {
-        width: 100%;
-      }
-
-      .product-information {
-        width: 100%;
-        height: auto;
- 
-        .about-product {           
-          p {
-            font-size: .85rem;
-            line-height: 1.4rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .product-detail-section {
-    .banner {
-      display: none;
-    }
-
-    .details-container {
-      padding: 0;
-      flex-direction: column;
-
-      .slider-wrapper {
-        width: 100%;
-      }
-
-      .product-information {
-        width: 100%;
-        height: auto;
-  
-        .action-buttons {  
-          button {
-            width: calc(50% - 0.5rem);       
-          }
-        }
-  
-        .about-product {           
-          p {
-            color: #6a6c77;
-            font-size: .85rem;
-            line-height: 1.4rem;
-          }
+          font-size: .85rem;
+          line-height: 1.4rem;
         }
       }
     }
