--- a/src/app/product/product-details/variant-section/variant-panel/variant-panel.component.scss
+++ b/src/app/product/product-details/variant-section/variant-panel/variant-panel.component.scss
@@ -1,11 +1,11 @@
 .variant-panel {
   width: 100%;
   height: 100%;
-  padding: 5rem 1.5rem;
   
   .option-list {
     width: 100%;
-    height: auto;
+    height: inherit;
+    padding: 5rem 1.5rem;
     overflow: hidden;
     overflow-y: auto;
     scrollbar-width: none;
@@ -33,20 +33,25 @@
       }
 
       &.active {
-        border: 2px solid #F72551;
+        border-color: #F72551;
       }
 
       img {
         flex-shrink: 0;
         width: 55px;
         height: 55px;
+        margin-right: 1rem;
         object-fit: contain;
       } 
 
       .option-name {
+        width: 240px;
+        margin-right: 1rem;
+        color: #101010;
         font-size: .85rem;
         white-space: nowrap;
         text-overflow: ellipsis;
+        text-align: left;
         overflow: hidden;
       }
 
