--- a/src/app/product/product-details/variant-section/variant-section.component.scss
+++ b/src/app/product/product-details/variant-section/variant-section.component.scss
@@ -24,13 +24,10 @@
       border-radius: 4px;
 
       .variant-type {       
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        width: fit-content;
 
         h3 {
           white-space: nowrap;
+          text-align: left;
           text-overflow: ellipsis;
           overflow: hidden;
         }
@@ -38,6 +35,7 @@
         p {
           font-size: .85rem;
           white-space: nowrap;
+          text-align: left;
           text-overflow: ellipsis;
           overflow: hidden;
         }
